luci-theme-bootstrap: minor page action alignment fix
(cherry picked from commit df38e4505ceae1634dc48c2793040f31856c758a)

--- a/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
+++ b/themes/luci-theme-bootstrap/htdocs/luci-static/bootstrap/cascade.css
@@ -1347,6 +1347,10 @@ body.modal-overlay-active #modal_overlay {
 	clear: both;
 }
 
+.cbi-page-actions > * {
+	vertical-align: middle;
+}
+
 .cbi-page-actions > :not([method="post"]):not(.cbi-button-apply):not(.cbi-button-negative):not(.cbi-button-save):not(.cbi-button-reset) {
 	float: left;
 	margin-right: .4em;
